syntax = "proto3";
package query_service;

service QueryService {
  rpc QueryMultiple (ObjectIds) returns (stream Object);
  rpc QueryBySchema (SchemaId) returns (stream Object);
  rpc QueryRaw (RawStatement) returns (ValueBytes);
}

message ObjectIds {
  repeated string object_ids = 1;
}

message SchemaId {
  string schema_id = 1;
}

message Object {
  string object_id = 1;
  bytes payload = 2;
}

message RawStatement {
  string raw_statement = 1;
}

message ValueBytes {
  bytes value_bytes = 1;
}
